objects/Syndicated_Research_Interaction__c.object
<CustomObject>
    <fields>
        <fullName>Conclusions__c</fullName>
        <label>Conclusions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Constituent__c</fullName>
        <label>Constituent</label>
        <picklist>
            <picklistValues>
                <fullName>NASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-NASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CXO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-CXO</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <description>displays the title of the associated contact</description>
        <formula>Contact__r.Title</formula>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Syndicated_Research_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_s_Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact’s Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Interaction__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date of Interaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Institution1__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Contact__r.AccountId, Contact__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Institution</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Research Study Interactions</relationshipLabel>
        <relationshipName>Syndicated_Research_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <label>Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Person Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lit Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Syndicated_Research_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Study__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Study</label>
        <referenceTo>Syndicated_Study__c</referenceTo>
        <relationshipName>Syndicated_Research_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Concept_Grade__c</fullName>
        <inlineHelpText>A – would invest @ tested price in next 6 months
B – would invest @ tested price in next 6-12 months
C – would invest @ tested price in next 12-18 months</inlineHelpText>
        <label>Product Concept Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Researcher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Researcher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Syndicated_Research_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emailed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Research Study Interaction</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Research Study Interactions</pluralLabel>
    <recordTypes>
        <fullName>NPD</fullName>
        <active>true</active>
        <label>NPD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Syndicated_Research_Interaction</fullName>
        <active>true</active>
        <label>Syndicated Research Interaction</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>